--- a/app/src/main/res/layout/fragment_dummies.xml
+++ b/app/src/main/res/layout/fragment_dummies.xml
@@ -11,7 +11,7 @@
             android:layout_height="match_parent"/>
 
     <ProgressBar
-            android:id="@+id/pb_loading"
+            android:id="@+id/login_pb_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
