--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -118,7 +118,7 @@
         <item name="android:fontFamily">@font/roboto_bold</item>
     </style>
 
-    <style name="AppTheme.Tab" parent="TextAppearance.MaterialComponents.Tab"/>
+    <style name="AppTheme.Tab" parent="TextAppearance.MaterialComponents.Button"/>
     <style name="AppTheme.Chip" parent="TextAppearance.MaterialComponents.Chip"/>
 
     <style name="AppTheme.Toolbar" parent="Base.Theme.MaterialComponents.Light.DarkActionBar">
