--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -17,10 +17,20 @@
             android:background="@color/white"
             app:menu="@menu/toolbar_editprofile_menu"
             app:navigationIcon="@drawable/ic_close"
-            app:title="@string/editProfile_toolbar_title" />
+            app:title="@string/editProfile_toolbar_title"/>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ProgressBar
+        android:id="@+id/editProfile_pb_pageLoading"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:indeterminate="true"
+        android:layout_gravity="center"
+        />
+
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/editProfile_content_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize">
@@ -34,11 +44,24 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/grey_circle_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_profile_placeholder"
                 tools:ignore="ContentDescription" />
+
+            <ProgressBar
+                android:id="@+id/editProfile_pb_imageLoading"
+                style="@style/AppTheme.ProgressBar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:indeterminate="true"
+                android:padding="16dp"
+                app:layout_constraintBottom_toBottomOf="@id/editProfile_iv_profile"
+                app:layout_constraintEnd_toEndOf="@id/editProfile_iv_profile"
+                app:layout_constraintStart_toStartOf="@id/editProfile_iv_profile"
+                app:layout_constraintTop_toTopOf="@id/editProfile_iv_profile" />
 
             <TextView
                 android:id="@+id/editProfile_tv_changePhoto"
@@ -46,6 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:clickable="true"
                 android:text="@string/editProfile_tvChangePhoto_text"
                 android:textColor="?attr/colorControlNormal"
                 android:textSize="18sp"
@@ -66,7 +90,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_changePhoto">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editProfile_et_name"
                     style="@style/AppTheme.EditProfile.EditText"
                     android:layout_width="match_parent"
@@ -89,7 +113,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editProfile_layout_name">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editProfile_et_bio"
                     style="@style/AppTheme.EditProfile.EditText"
                     android:layout_width="match_parent"
@@ -134,6 +158,7 @@
                 android:layout_marginTop="14dp"
                 android:layout_marginEnd="30dp"
                 android:hint="@string/editProfile_etEmailAddress_hint"
+                app:hintTextAppearance="@style/AppTheme.Subtitle1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_privateInfo_label">
@@ -143,9 +168,10 @@
                     style="@style/AppTheme.EditProfile.EditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
+                    android:enabled="false"
                     android:maxLength="100"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="sdfadf" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
